# inban

./: README.md  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  main.tsx  styles.css
src-tauri/: .env  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/migrations/2023-10-06-074912_create_books/: up.sql
src-tauri/migrations/2023-10-06-075435_create_accounts/: down.sql  up.sql
src-tauri/migrations/2023-10-06-075443_create_statements/: down.sql  up.sql
src-tauri/migrations/2023-10-06-081233_create_categories/: up.sql
src-tauri/src/: cli.rs  db.rs  main.rs  schema.rs
src-tauri/src/book/: mod.rs
src-tauri/src/client/: mod.rs
src-tauri/src/db/: models.rs
src/assets/components/: book-btn.tsx
