[package]
name = "inban"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenv = "0.15.0"
clap = { version = "4.4.6", features = ["derive"] }
uuid = "1.4.1"

[[bin]]
name = "inban-cli"
path = "src/cli.rs"

[[bin]]
name = "inban"
path = "src/main.rs"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
